@@ -816,6 +816,9 @@ Release 2.8.0 - UNRELEASED
 
     HDFS-8803. Move DfsClientConf to hdfs-client. (Mingliang Liu via wheat9)
 
+    HDFS-8917. Cleanup BlockInfoUnderConstruction from comments and tests.
+    (Zhe Zhang via jing9)
+
   OPTIMIZATIONS
 
     HDFS-8026. Trace FSOutputSummer#writeChecksumChunks rather than
